--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@mui/material": "^5.12.2",
+    "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-router": "^0.0.1-beta.83",
     "axios": "^1.4.0",
     "firebase": "^9.21.0",
