--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@tanstack/react-router": "^0.0.1-beta.83",
     "axios": "^1.4.0",
     "firebase": "^9.21.0",
+    "mui-image": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@haaxor1689/eslint-config": "^2.0.6",
     "@haaxor1689/prettier-config": "^2.0.2",
+    "@types/mui-image": "^1.0.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
