--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mui-image": "^1.0.7",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@haaxor1689/eslint-config": "^2.0.6",
